--- a/src/Header.css
+++ b/src/Header.css
@@ -5,7 +5,7 @@ header{
     align-items: center;
     justify-content: space-between;
     padding: 8px 52px ;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
 }
